Fix spacing on code

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -171,7 +171,7 @@ div.post_date {
 
 div.post > h3 {
   font: 150% palatino, georgia, serif;
-  letter-spacing: .2em;
+  letter-spacing: .1em;
   margin: 1.25em 0 .75em;
 }
 
